load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/container_hash/*.hpp",
    "include/boost/functional/*.hpp",
]

cc_library(
    name = "container_hash_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//libs/core",
        "@boost//libs/integer",
    ],
)

cc_library(
    name = "container_hash",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":container_hash_internal",
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/detail",
    ],
)
